--- a/stockMusic/style/styles.css
+++ b/stockMusic/style/styles.css
@@ -3,12 +3,16 @@ html * {
 }
 
 body {
-/*    background-color: rgba(80,80,80,.8);
+/*    background-color: rgba(200,200,200,.8);
 */
     font-family: monospace !important;
     overflow: hidden;
     height: 100%;
     padding: 50px 0 0 0;
+}
+
+.btn:focus {
+  outline: none;
 }
 
 .navbar-toggle {
